# Rayce

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  setup_submodules.py
assets/: CMakeLists.txt
assets/gltf/WaterBottle/: WaterBottle.gltf
assets/gltf/customCornell/: customCornell.glb
assets/internal/: rectangle.ply
assets/scenes/: bunny.ply  rectangle.ply  sphere.ply  suzanne.ply  teapot0.ply  teapot1.ply  testScene.xml
assets/scenes/testScene/: testScene.xml
assets/scenes/veach-bidir/: scene.xml
assets/scenes/veach-mis/: scene.xml
assets/shaders/: basic.frag.spv  basic.vert.spv  closestHit.rchit.spv  closestHit.slang.spv  closestHitSphere.rchit.spv  closestHitSphere.slang.spv  miss.rmiss.spv  miss.slang.spv  missShadow.slang.spv  raygen.rgen.spv  raygen.slang.spv  sphereIntersection.rint.spv  sphereIntersection.slang.spv
assets/shaders/old/: miss.rmiss.spv  raygen.rgen.spv  sphereIntersection.rint.spv
assets/shaders/src/: basic.frag  basic.vert  bsdf.glsl  closestHit.rchit  closestHitSphere.rchit  disney_bsdf.glsl  globals.glsl  host_device.hpp  miss.rmiss  random.glsl  raygen.rgen  sampling.glsl  sphereIntersection.rint  surface_state.glsl  utils.glsl
assets/shaders/src/slang/: bsdf.slang  closestHit.slang  closestHitSphere.slang  data.slang  globals.slang  hostDeviceInterop.slang  integrator.slang  miss.slang  missShadow.slang  random.slang  raygen.slang  sampling.slang  sphereIntersection.slang  utils.slang
assets/shaders/src/slang/built/: closestHit.rchit  closestHit.rchit.spv  closestHitSphere.rchit.spv  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv  sphereIntersection.rint.spv
assets/shaders/src/slang/core/: data.slang  globals.slang  hostDeviceInterop.slang  random.slang  utils.slang
assets/shaders/src/slang/rendering/: renderingUtils.slang
assets/shaders/src/slang/rendering/material/: ggx.slang  material.slang  materialInterface.slang  materialSystem.slang  phaseFunction.slang
assets/shaders/src/slang/rendering/raytracing/: closestHit.slang  closestHitSphere.slang  miss.slang  missShadow.slang  raygen.slang  sphereIntersection.slang
cmake/: FindSlang.cmake
doc/: CMakeLists.txt  Doxyfile.in  Mainpage.md  rayce_footer.html.in
examples/: CMakeLists.txt
examples/simpleGUI/: CMakeLists.txt  simpleGUI.cpp  simpleGUI.hpp
include/app/: imguiInterface.hpp  rayce.hpp  rayceApp.hpp
include/core/: types.hpp  utils.hpp
include/examples/simpleGUI/: simpleGUI.hpp
include/vk/: accelerationStructure.hpp  buffer.hpp  commandPool.hpp  descriptorSets.hpp  device.hpp  deviceMemory.hpp  fence.hpp  framebuffer.hpp  graphicsPipeline.hpp  image.hpp  imageMemoryBarrier.hpp  imageView.hpp  immediateSubmit.hpp  raytracingPipeline.hpp  surface.hpp
rayce/: CMakeLists.txt  app.hpp  core.hpp  rayce.cpp  scene.hpp  vulkan.hpp
rayce/app/: CMakeLists.txt  icons_font_awesome_5.hpp  imguiImpl.hpp  imguiInterface.cpp  imguiInterface.hpp  rayceApp.cpp  rayceApp.hpp
rayce/core/: CMakeLists.txt  color.hpp  export.hpp  iconsFA6.hpp  input.cpp  input.hpp  inputCodes.hpp  instanceData.hpp  log.hpp  loguru.cpp  loguru.hpp  macro.hpp  material.hpp  signal.hpp  spectrum.cpp  spectrum.hpp  spectrum.inl  timer.hpp  types.hpp  utils.hpp
rayce/include/: export.hpp  imguiInterface.hpp  log.hpp  loguru.hpp  macro.hpp  rayce.hpp  rayceApp.hpp  types.hpp  utils.hpp
rayce/include/vulkan/: accelerationStructure.hpp  buffer.hpp  commandBuffers.hpp  commandPool.hpp  descriptorPool.hpp  descriptorSetLayout.hpp  descriptorSets.hpp  device.hpp  deviceMemory.hpp  fence.hpp  framebuffer.hpp  geometry.hpp  graphicsPipeline.hpp  image.hpp  imageMemoryBarrier.hpp  imageView.hpp  immediateSubmit.hpp  instance.hpp  raytracingPipeline.hpp  renderPass.hpp  rtFunctions.hpp  semaphore.hpp  shaderModule.hpp  surface.hpp  swapchain.hpp  vertex.hpp  window.hpp
rayce/scene/: CMakeLists.txt  camera.cpp  camera.hpp  gltfHelper.hpp  loadHelper.hpp  miniply.cpp  rayceScene.cpp  rayceScene.hpp  scene.cpp  scene.hpp  stb_image.h  tiny_obj_loader.h  tinyparser-mitsuba.cpp
rayce/src/: imguiInterface.cpp  loguru.cpp  rayce.cpp  rayceApp.cpp
rayce/src/vulkan/: accelerationStructure.cpp  buffer.cpp  commandBuffers.cpp  commandPool.cpp  descriptorSets.cpp  device.cpp  deviceMemory.cpp  fence.cpp  geometry.cpp  graphicsPipeline.cpp  image.cpp  imageView.cpp  instance.cpp  raytracingPipeline.cpp  renderPass.cpp  rtFunctions.cpp  semaphore.cpp  shaderModule.cpp  swapchain.cpp  window.cpp
rayce/vulkan/: CMakeLists.txt  accelerationStructure.cpp  accelerationStructure.hpp  buffer.cpp  buffer.hpp  commandBuffers.cpp  commandBuffers.hpp  commandPool.cpp  commandPool.hpp  descriptorPool.cpp  descriptorPool.hpp  descriptorSetLayout.cpp  descriptorSetLayout.hpp  descriptorSets.cpp  descriptorSets.hpp  device.cpp  device.hpp  deviceMemory.cpp  deviceMemory.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  geometry.cpp  geometry.hpp  graphicsPipeline.cpp  graphicsPipeline.hpp  image.cpp  image.hpp  imageMemoryBarrier.hpp  imageView.cpp  imageView.hpp  immediateSubmit.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  raytracingPipeline.cpp  raytracingPipeline.hpp  renderPass.cpp  (+20 more)
rayceGui/: CMakeLists.txt
rayceGui/src/: rayceGui.cpp  rayceGui.hpp
rayce_gui/: CMakeLists.txt
rayce_gui/src/: rayce_gui.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  imguiInterface.cpp  rayce.cpp  rayceApp.cpp
src/core/: CMakeLists.txt  loguru.cpp
src/examples/: CMakeLists.txt
src/examples/simpleGUI/: CMakeLists.txt  simpleGUI.cpp
src/vk/: CMakeLists.txt  accelerationStructure.cpp  buffer.cpp  commandBuffers.cpp  commandPool.cpp  descriptorPool.cpp  descriptorSetLayout.cpp  descriptorSets.cpp  device.cpp  deviceMemory.cpp  fence.cpp  framebuffer.cpp  geometry.cpp  graphicsPipeline.cpp  image.cpp  imageView.cpp  instance.cpp  raytracingPipeline.cpp  renderPass.cpp  rtFunctions.cpp  semaphore.cpp  shaderModule.cpp  surface.cpp  swapchain.cpp  window.cpp
test/: CMakeLists.txt  mockClasses.hpp  testMain.cpp
(+7 files in other folders)
